# public/openapi.json
@@ -129,6 +129,38 @@
             "name"
           ]
         }
+      },
+      "GetVaultsResponse": {
+        "type": "array",
+        "items": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "string"
+            },
+            "name": {
+              "type": "string"
+            },
+            "ownerId": {
+              "type": "string"
+            },
+            "createdAt": {
+              "type": "string",
+              "format": "date-time"
+            },
+            "updatedAt": {
+              "type": "string",
+              "format": "date-time"
+            }
+          },
+          "required": [
+            "id",
+            "name",
+            "ownerId",
+            "createdAt",
+            "updatedAt"
+          ]
+        }
       }
     },
     "responses": {}
@@ -249,6 +281,29 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/MeResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/vaults": {
+      "get": {
+        "operationId": "get-vaults",
+        "summary": "Get all vaults",
+        "description": "Fetches all vaults for the current user",
+        "tags": [
+          "Vaults"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetVaultsResponse"
                 }
               }
             }
